--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
@@ -17,7 +17,7 @@
     }
 }
 
-.page-navigation__btn {
+.page-navigation__btn, .page-navigation__results {
     display: inline-block;
     font-size: 1em;
     margin-right: -4px;
