Amend HTML structure on RAA Select Employer

--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
@@ -642,7 +642,8 @@ a[rel="external"]:after {
   text-align: left; }
 
 .page-navigation__btn.next {
-  text-align: right; }
+  text-align: right;
+  float: right; }
 
 .page-navigation__btn.next .arrow-button {
   float: right;
