--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
@@ -38,11 +38,12 @@
 }
 
 .page-navigation__btn.previous {
-    text-align: left
+    text-align: left;
 }
 
 .page-navigation__btn.next {
-    text-align: right
+    text-align: right;
+    float:right;
 }
 
 .page-navigation__btn.next .arrow-button {
