--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -289,6 +289,27 @@ Custom Typography
     }
 }
 
+.heading-medium {
+    & .heading-secondary {
+        font-family: "nta", Arial, sans-serif;
+        font-weight: 400;
+        text-transform: none;
+        font-size: 18px;
+        line-height: 1.2;
+        display: block;
+        padding-top:5px;
+        padding-bottom: 2px;
+        display: block;
+        color: #6f777b; 
+    }
+    @include media(tablet) {
+        font-size: 24px;
+        line-height: 1.25; 
+        padding-top: 6px;
+        padding-bottom: 4px; 
+    }
+}
+
 /* -------------------------------------------------------------------
 Custom list
 ------------------------------------------------------------------- */
@@ -410,6 +431,20 @@ Custom expand content
 
 .sfa-collpanel.panel-open {
     display:block
+}
+
+/* -------------------------------------------------------------------
+Inset boxes
+------------------------------------------------------------------- */
+
+.sfa-inset {
+    padding:15px;
+    &-yellow {
+        background-color:$yellow-25;
+    }
+    &-light-grey {
+        background-color:$grey-4;
+    }
 }
 
 
