Start HTML structure fix on Application Form - Qualifications

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/ApprenticeshipCandidateViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/ApprenticeshipCandidateViewModel.cshtml
@@ -2,6 +2,7 @@
 
 <section class="grid-row">
     <div class="column-two-thirds">
+        <h3 class="heading-large">Your details</h3>
         <div class="grid-row">
             <div class="column-one-half">
                 <h3 class="heading-small">Full name</h3>
